<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Adivina Que es</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="jugar">Jugar</string>
    <string name="title_activity_juego">Juego</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="sky">sky</string>
    <string name="crear_nueva">Ir a Galería Personalizada</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_crear_nueva">CrearNueva</string>
    <string name="title_activity_galeria_personalizada">GaleriaPersonalizada</string>
    <string name="nueva">Nueva Galería</string>
    <string name="editar">Editar Galería</string>
    <string name="aviso_no_existen_galerias">Aún no has creado ninguna galería</string>
    <string name="title_activity_editar_galeria">EditarGaleria</string>
    <string name="nombre">Nombre</string>
    <string name="crear_nombre">Crear</string>
 </resources>