<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
    android:id="@+id/sky"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/sky"
    android:src="@drawable/sky" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/btnCrearNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnJugar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/crear_nueva" />

</RelativeLayout>
