<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:orientation="vertical"
    tools:context=".GaleriaPersonalizada" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnNueva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueva" />

            <Button
                android:id="@+id/editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar" />

        </LinearLayout>

        <ListView
            android:id="@+id/lstGalerias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/txtAvisoNoGalerias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="404dp"
            android:text="@string/aviso_no_existen_galerias" />

    </LinearLayout>

</RelativeLayout>